--- a/index.html
+++ b/index.html
@@ -459,14 +459,19 @@
     async function updateHeaderInfo(csvResponse) { // Accept Response object
       try {
         const lastModified = csvResponse.headers.get('last-modified');
+        console.log('Last-Modified header:', lastModified); // Debug log
         let updatedText = '알 수 없음';
         if (lastModified) {
           const date = new Date(lastModified);
-          updatedText = date.toLocaleString('ko-KR', {
-            year: 'numeric', month: '2-digit', day: '2-digit',
-            hour: '2-digit', minute: '2-digit', hour12: false
-          });
+          console.log('Parsed Date object:', date); // Debug log
+          if (!isNaN(date.getTime())) { // Check if date is valid
+            updatedText = date.toLocaleString('ko-KR', {
+              year: 'numeric', month: '2-digit', day: '2-digit',
+              hour: '2-digit', minute: '2-digit', hour12: false
+            });
+          }
         }
+        console.log('Final updatedText:', updatedText); // Debug log
         document.getElementById('last-updated').textContent = `Updated: ${updatedText}`;
 
         const rateRes = await fetch('https://open.er-api.com/v6/latest/USD');
